# pio_encoder

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: publish_docs.yml  rust.yml
example/rp/: Cargo.toml
example/rp235/: Cargo.toml  rust-toolchain.toml
example/substep/: Cargo.toml
example/substep/src/: main.rs
exe/: Cargo.toml
exe/.cargo/: config.toml
exe/src/: main.rs  step_verstion.rs
exe/src/substep_version/: encodeing.rs  mod.rs  pio.rs
logic/: Cargo.toml
logic/src/: encodeing.rs  lib.rs  measurement.rs  mesurement.rs  speed.rs  step.rs
pio_speed_encoder/: Cargo.toml
pio_speed_encoder/src/: lib.rs  quadrature_encoder.pio  step_verstion.rs
pio_speed_encoder/src/substep_version/: mod.rs  pio.rs
src/: main.rs
src/substep_version/: mod.rs  pio.rs
