[package]
name = "pio_counting_encoder"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.6.1",  features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread",  "defmt"] }
embassy-time = { version = "0.4.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embedded-hal-async = "1.0"
embassy-futures = { version = "0.1.0"  }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m-rt = "0.7.0"
embedded-hal-bus = "0.3.0"
mcp2515 = { version = "0.3.0", features = ["defmt"] }
embedded-can = "0.4.1"
embedded-hal = "1.0.0"


panic-abort = "0.3.2"
panic-reset = "0.1.1"
critical-section = "1.2.0"
cortex-m = "0.7.7"
fixed = "1.29.0"

logic = {path="../logic/",features = ["defmt"]}
