[package]
name = "pio_speed_encoder"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-time = { version = "0.5.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0" }
embassy-futures = { version = "0.1.0"  }

defmt = "0.3"
defmt-rtt = "0.4"

critical-section = "1.2.0"
fixed = "1.29.0"

logic = {path="../logic/",features = ["defmt"]}

[features]
rp2040 = ["embassy-rp/rp2040"]
rp235x = ["embassy-rp/_rp235x"]
